src/frontend/src/components/skill-item/skill-item-editor.less
.skill-item-editor {
	width: 100%;
	display: flex;
	justify-content: space-between;
	position: absolute;

	&__skill-editor,
	&__will-editor {
		width: 50%;
	}

	&__skill-editor {
		  direction: rtl
	}

	&__delete {
		position: absolute;
		right: 0;
		transform: translateX(200%)
	}
  
  input[type="range"] {
    height: inherit;
    width: 100%;
    &::-moz-range-track {
      position: relative;
      height: 2px;
      opacity: 0;
    }
    &::-moz-range-thumb {
      height: 12px;
      width: 12px;
      background-color: @s2-white;
      border: 2px solid @s2-black;
      border-radius: 50%;
    }
    &::-moz-focusring {
      outline: 1px solid white;
      outline-offset: -1px;
    }
  }
}

